Add first test for HomePageView

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 /secrets.py
+
+# Сокрытие резервных копий БД
+db_itstaffing_v[0-9]*.sql
